tests/snapshots/test_runner__tests__compiler__typecheck__import_11.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
import * from "./import_1.kk"
import * from "./import_12.kk"
//     ^ Error: import all clashing with symbols declared in this module

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_11.kk:2:8
  │
2 │ import * from "./import_12.kk"
  │        ^ Duplicated name
  │
  = This variable `foo` is already declared before in this module.
